ルーティング変更,レイアウト作成途中

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,19 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<h2>New Books</h2>
+
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+
+  <div class="field">
+    <h4 class="book_title">Title</h4>
+    <%= f.text_field :title %>
+  </div>
+  
+  <div class="field">
+    <h4 class="book_body">Body</h4>
+    <%= f.text_area :body %>
+  </div>
+  
+  <div class="field">
+      <%= f.submit 'Create Book' %>
+  </div>
+
+<% end %>
