--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <hesd>
+    <link rel="stylesheet" href="../../app/assets/application." />
+    <title>WebCampBackendNew</title>
+  </hesd>
+  
+  <body>
+    <p id="notice"></p>
+    <h1>Books</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+      
+    </table>
+  </body>
+</html>
