[Add]新規登録機能,create機能,indexページ,showページ,editページ,update機能,destroy機能作成

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,23 +1,27 @@
-<!DOCTYPE html>
-<html>
-  <hesd>
-    <link rel="stylesheet" href="../../app/assets/application." />
-    <title>WebCampBackendNew</title>
-  </hesd>
-  
-  <body>
-    <p id="notice"></p>
+<p id="notice"></p>
     <h1>Books</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Body</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody></tbody>
+    
+    <% @books.each do |book| %>
+    
+      <table>
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Body</th>
+            <th colspan="3"></th>
+          </tr>
+         </thead>
+         <tbody>
+           <tr>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
+            <td><%= link_to "Show", book_path(book.id) %></td>
+            <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+            <td><%= link_to "	Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+          </tr>
+         </tbody>
       
-    </table>
-  </body>
-</html>
+      </table>
+    <% end %>
+    
+ 
