--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,6 @@
 <p id="notice"></p>
     <h1>Books</h1>
     
-    <% @books.each do |book| %>
-    
       <table>
         <thead>
           <tr>
@@ -11,6 +9,7 @@
             <th colspan="3"></th>
           </tr>
          </thead>
+      <% @books.each do |book| %>  
          <tbody>
            <tr>
             <td><%= book.title %></td>
@@ -20,8 +19,35 @@
             <td><%= link_to "	Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
           </tr>
          </tbody>
-      
+      <% end %> 
       </table>
-    <% end %>
+   
     
- 
+  <h2>New Books</h2>
+
+<% if @book.errors.any? %>
+  <%=@book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+
+  <div class="field">
+    <h4 class="book_title">Title</h4>
+    <%= f.text_field :title %>
+  </div>
+  
+  <div class="field">
+    <h4 class="book_body">Body</h4>
+    <%= f.text_area :body %>
+  </div>
+  
+  <div class="field">
+      <%= f.submit 'Create Book' %>
+  </div>
+
+<% end %>
