--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,28 +1,28 @@
-<h2>New Books</h2>
+<!--<h2>New Books</h2>-->
 
-<% if @book.errors.any? %>
-  <%=@book.errors.count %>errors prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<!--<% if @book.errors.any? %>-->
+<!--  <%=@book.errors.count %>errors prohibited this book from being saved:-->
+<!--  <ul>-->
+<!--    <% @book.errors.full_messages.each do |message| %>-->
+<!--      <li><%= message %></li>-->
+<!--    <% end %>-->
+<!--  </ul>-->
+<!--<% end %>-->
 
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
+<!--<%= form_with model: @book, url: '/books', method: :post do |f| %>-->
 
-  <div class="field">
-    <h4 class="book_title">Title</h4>
-    <%= f.text_field :title %>
-  </div>
+<!--  <div class="field">-->
+<!--    <h4 class="book_title">Title</h4>-->
+<!--    <%= f.text_field :title %>-->
+<!--  </div>-->
   
-  <div class="field">
-    <h4 class="book_body">Body</h4>
-    <%= f.text_area :body %>
-  </div>
+<!--  <div class="field">-->
+<!--    <h4 class="book_body">Body</h4>-->
+<!--    <%= f.text_area :body %>-->
+<!--  </div>-->
   
-  <div class="field">
-      <%= f.submit 'Create Book' %>
-  </div>
+<!--  <div class="field">-->
+<!--      <%= f.submit 'Create Book' %>-->
+<!--  </div>-->
 
-<% end %>
+<!--<% end %>-->
